# crypto_ai

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docs/: git-workflow.md
notebooks/: 00_env_check.ipynb
tests/: test_sanity.py
