[project]
name = "crypto-ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Shubhamshinde5080",email = "bcs_2024065@iiitm.ac.in"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "torch (>=2.7.1,<3.0.0)",
    "pytorch-lightning (>=2.5.2,<3.0.0)",
    "optuna (>=4.4.0,<5.0.0)",
    "ccxt (>=4.4.92,<5.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "fastapi (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "tweepy (>=4.16.0,<5.0.0)",
    "python-telegram-bot (>=22.2,<23.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "backtesting (>=0.6.4,<0.7.0)",
    "mlflow (>=3.1.1,<4.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas-ta (>=0.3.14b0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"

